--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-# ??
+# \u7AEF\u53E3
 server.port=3000
-# ?????
+# \u6570\u636E\u914D\u7F6E
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/template?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
-# mybatis-plus ??
+# mybatis-plus \u914D\u7F6E
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
-# ????
+# \u65E5\u5FD7\u914D\u7F6E
 logging.level.root=info
-
+# \u9759\u6001\u8DEF\u5F84\u914D\u7F6E
+spring.web.resources.static-locations=classpath:/static/
