重置密码功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,24 @@ mybatis-plus.mapper-locations=classpath:mapper/*.xml
 logging.level.root=info
 # \u9759\u6001\u8DEF\u5F84\u914D\u7F6E
 spring.web.resources.static-locations=classpath:/static/
+
+#\u90AE\u4EF6\u914D\u7F6E
+spring.mail.host = smtp.qq.com
+spring.mail.username = xxx@qq.com
+spring.mail.password = xxx
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.default-encoding=UTF-8
+mail.code.overtime = 5
+
+# redis\u914D\u7F6E
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=10s
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+spring.data.redis.jedis.pool.min-idle=0
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+spring.data.redis.jedis.pool.max-idle=8
+# \u8FDE\u63A5\u6C60\u7684\u6700\u5927\u6570\u636E\u5E93\u8FDE\u63A5\u6570
+spring.data.redis.jedis.pool.max-active=8
+# #\u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.data.redis.jedis.pool.max-wait=-1ms
